corrected links on about page

--- a/about.html
+++ b/about.html
@@ -38,13 +38,13 @@
 
 <p>Contenticious is a small and clean <a href="http://mojolicio.us/">Mojolicious</a> web app with additional
 tools to provide a smooth Markdown publishing workflow for you.
-It's developed as open source with one of the most free <a href="#license">licenses</a>
+It's developed as open source with one of the most free <a href="http://github.com/memowe/contenticious/blob/master/MIT-LICENSE#L1">licenses</a>
 (MIT License) to make it really easy for you to get your stuff done.</p>
 
 <p>Contenticious lives on github. There you'll find</p>
 
 <ul>
-<li><a href="https://github.com/memowe/contenticious/wiki">a wiki with useful things</a> <br />
+<li><a href="http://github.com/memowe/contenticious/wiki">a wiki with useful things</a> <br />
 Feel free to contribute and help other users.</li>
 <li><a href="http://github.com/memowe/contenticious/tags">the latest Contenticious distribution as zip- or tarball</a></li>
 <li><a href="http://github.com/memowe/contenticious/issues">an issue tracker</a> <br />
