fixed footer link

--- a/deployment.html
+++ b/deployment.html
@@ -69,7 +69,7 @@ There's a <a href="https://github.com/memowe/contenticious/blob/master/t/07_moun
     </p>
     <p id="built_with">
         built with
-        <a href="http://github.com/memowe/contenticious">contenticious</a>,
+        <a href="http://memowe.github.com/contenticious">contenticious</a>,
         on top of <a href="http://mojolicio.us/">Mojolicious</a>.
     </p>
 </div><!-- footer -->
