--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@ if something changes.</li>
     </p>
     <p id="built_with">
         built with
-        <a href="http://github.com/memowe/contenticious">contenticious</a>,
+        <a href="http://memowe.github.com/contenticious">contenticious</a>,
         on top of <a href="http://mojolicio.us/">Mojolicious</a>.
     </p>
 </div><!-- footer -->
