--- a/build_content.html
+++ b/build_content.html
@@ -115,7 +115,7 @@ pages
     </p>
     <p id="built_with">
         built with
-        <a href="http://github.com/memowe/contenticious">contenticious</a>,
+        <a href="http://memowe.github.com/contenticious">contenticious</a>,
         on top of <a href="http://mojolicio.us/">Mojolicious</a>.
     </p>
 </div><!-- footer -->
