--- a/customize.html
+++ b/customize.html
@@ -85,7 +85,7 @@ Good luck!</p>
     </p>
     <p id="built_with">
         built with
-        <a href="http://github.com/memowe/contenticious">contenticious</a>,
+        <a href="http://memowe.github.com/contenticious">contenticious</a>,
         on top of <a href="http://mojolicio.us/">Mojolicious</a>.
     </p>
 </div><!-- footer -->
