--- a/first_steps/install.html
+++ b/first_steps/install.html
@@ -87,7 +87,7 @@ $ sudo make install
     </p>
     <p id="built_with">
         built with
-        <a href="http://github.com/memowe/contenticious">contenticious</a>,
+        <a href="http://memowe.github.com/contenticious">contenticious</a>,
         on top of <a href="http://mojolicio.us/">Mojolicious</a>.
     </p>
 </div><!-- footer -->
